syntax = "proto3";
package currency;

enum CurrencyCode {
    PLN = 0;
    USD = 1;
    EUR = 2;
    GBP = 3;
}

message CurrencyRate {
    CurrencyCode code = 1;
    double rate = 2;
}

message ExchangeRateRequest {
    repeated CurrencyCode currencies = 2;
}

message ExchangeRateResponse{
    repeated CurrencyRate rates = 1;
}

service Exchange {
    rpc CurrentRates(ExchangeRateRequest) returns (ExchangeRateResponse) {}
    rpc StreamRates(ExchangeRateRequest) returns (stream CurrencyRate) {}
}